--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ authors = [
 ]
 readme = "README.md"
 license = { file = "LICENSE" }
+license-files = [
+  "LICENSE",
+  "licenses/GPL-3.0.txt",
+  "licenses/LGPL-3.0.txt"
+]
 requires-python = ">=3.12"
 
 [project.dependencies]
